# avoc

./: .gitignore  README.md  pyproject.toml  requirements-3.12.3.hashes.txt  requirements-3.12.3.txt
data/: A-Voc.desktop
src/avoc/: audio.py  audiopipewire.py  audiosettings.py  customizeui.py  exceptions.py  main.py  processingsettings.py  windowarea.py
test/: test_voicecardsmanager.py
