[project]
name = "avoc"
version = "0.0.1"
authors = [
  { name="develOseven", email="devel.oseven@gmail.com" },
]
description = "Voice changer for desktop"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
  "PySide6",
  "PySide6-GlobalHotkeys",
  "voiceconversion",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
avoc = "avoc:main.main"

[project.urls]
Homepage = "https://github.com/develOseven/avoc"
Issues = "https://github.com/develOseven/avoc/issues"
